second section added

--- a/home.html
+++ b/home.html
@@ -21,6 +21,53 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
-    
+    <section id="team">
+      <div class="container">
+        <section class="team">
+          <div class="team-header">
+            <div class="head-text">
+              <h5>Our Team</h5>
+              <h2>Team of Designers and Developers</h2>
+            </div>
+            <div class="head-circle">
+              <div class="circle">
+                <img src="./assets/images/Path.png" alt="" />
+              </div>
+              <div class="circle">
+                <img src="./assets/images/Path (1).png" alt="" />
+              </div>
+            </div>
+          </div>
+
+          <div class="team-person">
+            <div class="card-team">
+                <div class="card-image"><img src="./assets/images/azah.png" alt=""></div>
+                <h4>Azah Anyeni</h4>
+                <p>Designer</p>
+            </div>
+            <div class="card-team">
+                <div class="card-image"><img class="roe" src="./assets/images/roelof.png" alt=""></div>
+                <h4>Roelof Bekkenenks</h4>
+                <p>React Developer</p>
+            </div>
+            <div class="card-team">
+                <div class="card-image"><img class="leo" src="./assets/images/leonardo.png" alt=""></div>
+                <h4>Leonardo Oliveira</h4>
+                <p>Illustrator</p>
+            </div>
+            <div class="card-team">
+                <div class="card-image"><img class="bella" src="./assets/images/izabella.png" alt=""></div>
+                <h4>Izabella Tabakova</h4>
+                <p>Product Designer</p>
+            </div>
+          </div>
+          <div class="points">
+            <div class="point color"></div>
+            <div class="point"></div>
+            <div class="point"></div>
+          </div>
+        </section>
+      </div>
+    </section>
   </body>
 </html>
