--- a/home.html
+++ b/home.html
@@ -1,73 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
-  </head>
-  <body>
-    <section id="team">
-      <div class="container">
-        <section class="team">
-          <div class="team-header">
-            <div class="head-text">
-              <h5>Our Team</h5>
-              <h2>Team of Designers and Developers</h2>
-            </div>
-            <div class="head-circle">
-              <div class="circle">
-                <img src="./assets/images/Path.png" alt="" />
-              </div>
-              <div class="circle">
-                <img src="./assets/images/Path (1).png" alt="" />
-              </div>
-            </div>
-          </div>
+</head>
 
-          <div class="team-person">
-            <div class="card-team">
-                <div class="card-image"><img src="./assets/images/azah.png" alt=""></div>
-                <h4>Azah Anyeni</h4>
-                <p>Designer</p>
-            </div>
-            <div class="card-team">
-                <div class="card-image"><img class="roe" src="./assets/images/roelof.png" alt=""></div>
-                <h4>Roelof Bekkenenks</h4>
-                <p>React Developer</p>
-            </div>
-            <div class="card-team">
-                <div class="card-image"><img class="leo" src="./assets/images/leonardo.png" alt=""></div>
-                <h4>Leonardo Oliveira</h4>
-                <p>Illustrator</p>
-            </div>
-            <div class="card-team">
-                <div class="card-image"><img class="bella" src="./assets/images/izabella.png" alt=""></div>
-                <h4>Izabella Tabakova</h4>
-                <p>Product Designer</p>
-            </div>
-          </div>
-          <div class="points">
-            <div class="point color"></div>
-            <div class="point"></div>
-            <div class="point"></div>
-          </div>
-        </section>
-      </div>
+<body>
+    <section id="team">
+        <div class="container">
+            <section class="team">
+                <div class="team-header">
+                    <div class="head-text">
+                        <h5>Our Team</h5>
+                        <h2>Team of Designers and Developers</h2>
+                    </div>
+                    <div class="head-circle">
+                        <div class="circle">
+                            <img src="./assets/images/Path.png" alt="" />
+                        </div>
+                        <div class="circle">
+                            <img src="./assets/images/Path (1).png" alt="" />
+                        </div>
+                    </div>
+                </div>
+
+                <div class="team-person">
+                    <div class="card-team">
+                        <div class="card-image">
+                            <img src="./assets/images/azah.png" alt="" />
+                        </div>
+                        <h4>Azah Anyeni</h4>
+                        <p>Designer</p>
+                    </div>
+                    <div class="card-team">
+                        <div class="card-image">
+                            <img class="roe" src="./assets/images/roelof.png" alt="" />
+                        </div>
+                        <h4>Roelof Bekkenenks</h4>
+                        <p>React Developer</p>
+                    </div>
+                    <div class="card-team">
+                        <div class="card-image">
+                            <img class="leo" src="./assets/images/leonardo.png" alt="" />
+                        </div>
+                        <h4>Leonardo Oliveira</h4>
+                        <p>Illustrator</p>
+                    </div>
+                    <div class="card-team">
+                        <div class="card-image">
+                            <img class="bella" src="./assets/images/izabella.png" alt="" />
+                        </div>
+                        <h4>Izabella Tabakova</h4>
+                        <p>Product Designer</p>
+                    </div>
+                </div>
+                <div class="points">
+                    <div class="point color"></div>
+                    <div class="point"></div>
+                    <div class="point"></div>
+                </div>
+            </section>
+        </div>
     </section>
-  </body>
+    <section class="founderwords">
+        <div class="container">
+            <div class="founderwordsleft">
+                <img id="rendelanimg" src="./assets/images/Ron Delan.png" />
+            </div>
+            <div class="founderwordsright">
+                <i id="founderwords">FOUNDER WORDS</i>
+                <img id="mark" src="./assets/images/mark.png" />
+                <h3 id="digitalagency">
+                    Digital agency is a business you hire to outsource your digital marketing efforts
+                </h3>
+                <p id="rendelan">Ren Delan</p>
+                <h5 id="founder">Founder</h5>
+            </div>
+        </div>
+    </section>
+</body>
+
 </html>
