--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
     <section class="founderwords">
         <div class="container">
             <div class="founderwordsleft">
-                <img id="rendelanimg" src="./assets/images/Ron Delan.png" />
+                <img id="rendelanimg" src="./assets/images/RenDelan.png" />
             </div>
             <div class="founderwordsright">
                 <i id="founderwords">FOUNDER WORDS</i>
