--- a/home.html
+++ b/home.html
@@ -22,6 +22,69 @@
   </head>
 
   <body>
+    <header>
+      <div class="all">
+        <p>EVENTS</p>
+        <h1>Explore Future</h1>
+        <h1>Conferences</h1>
+        <div class="cards">
+          <div class="card">
+            <div class="up">
+              <div class="num">3</div>
+              <div>
+                <h4>November</h4>
+                <h4 class="year">2021</h4>
+              </div></div>
+              <div class="time">
+                <img src="./assets/images/Shape.svg" alt="">
+                <span>9:00 am-3:00pm</span>
+              </div>
+            
+            <div class="down">
+            <h4>Design Weeks</h4>
+            <p class="text">Digital agency is a business you hire to outsource your digital.</p>
+            <p class="exp">Explore Now</p></div>
+          </div>
+          <div class="card">
+            <div class="up">
+              <div class="num">15</div>
+
+              <div>
+                <h4>November<h4>
+                <h4 class="year">2021</h4>
+              </div>
+            </div>
+            <div class="time">
+              <img src="./assets/images/Shape.svg" alt="">
+              <span>1:00 pm-8:00pm</span>
+            </div>
+            <div class="down">
+            <h4>Interior Design</h4>
+            <p class="text">Marketing efforts, instead of handling in-house.</p>
+            <p class="exp">Explore Now</p></div>
+          </div>
+          <div class="card">
+            <div class="up">
+              <div class="num">2</div>
+              <div>
+                <h4>December</h4>
+                <h4 class="year">2021</h4>
+              </div>
+            </div>
+            <div class="time">
+              <img src="./assets/images/Shape.svg">
+              <span>10:00 am-2:00pm</span>
+            </div>
+            <div class="down">
+            <h4>The F design events</h4>
+            <p class="text">Provide your business with a variety of digital solutions to promote.</p>
+            <p class="exp">Explore Now</p>
+          </div>
+        </div>
+        </div>
+        <button>EXPLORE MORE</button>
+      </div>
+    </header>
     <section id="team">
       <div class="container">
         <section class="team">
