First section added

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <header>
+    <section>
       <div class="all">
         <p>EVENTS</p>
         <h1>Explore Future</h1>
@@ -84,7 +84,7 @@
         </div>
         <button>EXPLORE MORE</button>
       </div>
-    </header>
+    </section>
     <section id="team">
       <div class="container">
         <section class="team">
