first section added

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <section>
+    <section id="first">
       <div class="all">
         <p>EVENTS</p>
         <h1>Explore Future</h1>
@@ -37,7 +37,7 @@
               </div></div>
               <div class="time">
                 <img src="./assets/images/Shape.svg" alt="">
-                <span>9:00 am-3:00pm</span>
+                <span>9:00 am-3:00 pm</span>
               </div>
               <div class="line"></div>
             <div class="down">
@@ -56,7 +56,7 @@
             </div>
             <div class="time">
               <img src="./assets/images/Shape.svg" alt="">
-              <span>1:00 pm-8:00pm</span>
+              <span>1:00 pm-8:00 pm</span>
             </div><div class="line"></div>
             <div class="down">
             <h4>Interior Design</h4>
@@ -73,7 +73,7 @@
             </div>
             <div class="time">
               <img src="./assets/images/Shape.svg">
-              <span>10:00 am-2:00pm</span>
+              <span>10:00 am-2:00 pm</span>
             </div><div class="line"></div>
             <div class="down">
             <h4>The F design events</h4>
